# LSLOpt

./: .travis.yml  CMakeLists.txt  CMakeLists.txt.orig  INSTALLATION.doxygen  LICENSE  README.md  mainpage.doxygen
documentation/: doxygen.cfg
documentation/sphinx/: conf.py  index.rst
include/: CMakeLists.txt
include/LSLOpt/: BFGS.hpp  BFGSB.hpp  DebugProblem.hpp  GD.hpp  LBFGS.hpp  LBFGSB.hpp  OptimizationParameters.hpp  OptimizationResult.hpp  OptimizationStatus.hpp  OutputUtils.hpp  ScalarTraits.hpp  Types.hpp
include/LSLOpt/Implementation/: BFGSStorage.hpp  BoxConstrainedAlgorithm.hpp  DefineOutputMacros.hpp  GDStorage.hpp  LBFGSStorage.hpp  LineSearches.hpp  ProblemTraits.hpp  QuasiNewton.hpp  SubspaceUtils.hpp  UnconstrainedAlgorithm.hpp  UndefOutputMacros.hpp  Utils.hpp
paper_data/: README
paper_data/PlotData/: Figure2a_data_1d_plot.csv  Figure2b_data_2d_plot.csv  Figure3a_data_bfgs_2d_plot.csv  Figure3b_data_lsl-bfgs_2d_plot.csv
paper_data/scripts/: plot_1d.py  plot_2d.py
src/Examples/: CMakeLists.txt  Example.cpp
src/PaperExample/: CMakeLists.txt
src/PaperExamples/: AutoGeneratedSpline.hpp  CMakeLists.txt  LJLike_0.cpp  LJLike_0.hpp  ModelSystem.cpp  ModelSystem.hpp  PaperExample.cpp  Plot1d.cpp  Plot2d.cpp  Plot2dOpt.cpp
src/Test/: CMakeLists.txt  ExecuteOptimization.hpp  MinusInfinityTest.cpp  Multiprecision.hpp  ReparameterizeTest.cpp  Rosenbrock.hpp  RosenbrockDebugTest.cpp  RosenbrockMultiprecisionTest.cpp  RosenbrockTest.cpp  TerminationTests.cpp  UnboundedTest.cpp  WrongBoundsTest.cpp  WrongDerivativeTest.cpp
